# miot-x

./: README.md  mcp_config.json  mcp_pipe.py  miot-pipe.service  miot-x.service  pyproject.toml
scripts/: login.sh
skills/miot-cli/: SKILL.md
skills/miot-mcp/: SKILL.md
src/miot_mcp/: xiaozhi.py
src/miot_skill/: __init__.py  __main__.py  auth.py  config.py  proxy.py  server.py  xiaozhi.py
src/miot_x/: __init__.py  __main__.py
src/miot_x/cli/: __init__.py  commands.py
src/miot_x/homekit/: __init__.py  accessory.py  bridge.py  mappers.py
src/miot_x/lib/: __init__.py  auth.py  config.py  proxy.py
src/miot_x/mcp/: __init__.py  server.py  xiaozhi.py
src/miot_x/web/: app.py  oauth_callback.py
src/miot_x/web/routes/: auth.py  devices.py  homes.py  scenes.py
src/miot_x/web/static/: app.js  index.html  style.css
