[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "miot-x"
version = "0.2.0"
description = "AI-powered Xiaomi Mijia smart home control built on the official miot_kit SDK"
requires-python = ">=3.10"
dependencies = [
    "miot_kit",
    "fastmcp>=2.11",
    "aiohttp>=3.12",
    "qrcode>=8.0",
    "websockets>=11.0",
    "python-dotenv>=1.0",
]

[project.scripts]
miot-x = "miot_x:main"

[tool.setuptools.packages.find]
where = ["src"]
