[build-system]
requires = ["setuptools>=61", "wheel", "toml>=0.10.2"]
build-backend = "setuptools.build_meta"

[project]
name = "miot-x"
version = "0.2.1"
description = "AI-powered Xiaomi Mijia smart home control — bundled miot_kit SDK, zero external SDK dependency"
requires-python = ">=3.10"
dependencies = [
    "aiocache>=0.12",
    "aiofiles>=24.1",
    "aiohttp>=3.12.14",
    "psutil>=7.0.0",
    "pydantic>=2.4.0",
    "fastmcp>=2.11",
    "zeroconf>=0.147",
    "av>=15.0",
    "pillow>=10.3.0",
    "toml>=0.10.2",
    "qrcode>=8.0",
    "websockets>=11.0",
    "python-socks[asyncio]>=2.0",
    "python-dotenv>=1.0",
    "HAP-python>=4.0",
]

[project.scripts]
miot-x = "miot_x:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["miot_x*", "miot*"]

[tool.setuptools.package-data]
miot = ["libs/**/*.*", "specs/*", "i18n/**/*.*", "configs/*"]
